Udpate links to be dynamic. Add link to python SDK

--- a/static/front_page/index.html
+++ b/static/front_page/index.html
@@ -12,12 +12,12 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
-  
+
   <title>IOT Server</title>
   
 <style> 
     .custom_centered{
-      margin-top: 33%;
+      margin-top: 25%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -27,6 +27,12 @@
 .central-icon{
   width: 160px;
   margin:20px;
+}
+
+.deactivate{
+  color: grey;
+  outline-color: grey;
+
 }
 </style>
 
@@ -41,11 +47,17 @@
     <h1>IOT Server</h1>
     
     
-    <a class="button" href="https://github.com/oyetkin/droneiotserver"> Code</> 
-</a>
+    <a class="button" href="https://github.com/oyetkin/droneiotserver"> Code</> </a>
 
 <!-- Outlined Button -->
-<a class="button button-outline" href="https://api.is-conic.com/redoc">Docs</a>
+<a class="button button-outline" href="/redoc">Docs </sp> </a>
+
+<br>
+<br>
+<h2>SDK</h2>
+
+<a class="button button-outline" href="https://github.com/isConic/api_of_things_python">Python</a>
+
 
     <p></p>
 </div>
